fix word wrap issue in links in project view

--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -60,6 +60,10 @@ table {
     font-weight: bold;
     white-space: nowrap;
   }
+
+  .breakwrap {
+    word-break: break-all;
+  }
 }
 
 .labeled-title {
